# Lemon

./: .gitignore  AUTHORS  README.rst  generate_additional_files.py  generate_cs_module_desktop_files.py  lemon-wayland.session.in  lemon.pot  lemon.session.in  lemon2d.session.in  makepot  meson.build  meson_options.txt  restore
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build.yml
calendar-server/: lemon-calendar-server.in  lemon-calendar-server.py  meson.build
data/: lemon-osk-layouts.gresource.xml  lemon-wayland.desktop.in.in  lemon.desktop.in.in  lemon2d.desktop.in.in  meson.build  org.lemon.gestures.gschema.xml  org.lemon.gschema.xml  update-osk-layouts.sh
data/pam/: meson.build
data/services/: meson.build  org.Lemon.HotplugSniffer.service.in  org.Lemon.Melange.service.in  org.Lemon.Slideshow.service.in  org.lemon.BackupLocker.service.in  org.lemon.CalendarServer.service.in
data/theme/: meson.build
data/theme/lemon-sass/: meson.build
data/theme/lemon-sass/widgets/: _base.scss  _expo.scss
data/wayland_sessions/: lemon-wayland.desktop.in  meson.build
data/xdg-portal/: meson.build
data/xsessions/: lemon.desktop.in  lemon2d.desktop.in  meson.build
debian/: README.Debian  changelog  control  copyright  lemon-common.install  lemon-doc.dirs  lemon-doc.links  lemon.gsettings-override  not-installed  rules
debian/source/: lintian-overrides
docs/applets-examples/finder@lemon.org/: applet.js  metadata.json
docs/reference/: meson.build
docs/reference/cinnamon-tutorials/: building.xml
docs/reference/lemon/: lemon-docs.sgml  meson.build
docs/reference/lemon-js/: gen_lib.py  lemon-js-docs.sgml  meson.build
docs/reference/lemon-tutorials/: building.xml  documenting-tutorial.xml  importer.xml  lemon-tutorials-docs.sgml  meson.build  using-documentation.xml  write-applet.xml  xlet-settings-ref.xml  xlet-settings.xml  xlet-translating.xml
docs/reference/st/: lemon-st-docs.sgml  meson.build
docs/search-providers-examples/apt@lemon.org/: metadata.json  search_provider.js  search_provider.py
docs/search-providers-examples/calc@lemon.org/: metadata.json  search_provider.js
docs/search-providers-examples/chromium-history@lemon.org/: metadata.json  search_provider.js
docs/search-providers-examples/trackerprovider@lemon.org/: metadata.json  search_provider.js  search_provider.py
docs/search-providers-examples/wikipedia@lemon.org/: metadata.json  search_provider.js
docs/search-providers-examples/yahoo@lemon.org/: metadata.json
files/etc/xdg/menus/: lemon-applications.menu
files/usr/share/applications/: lemon-file-handler.desktop  lemon-killer-daemon.desktop  lemon-menu-editor.desktop  lemon-onscreen-keyboard.desktop  lemon-settings-actions.desktop  lemon-settings-applets.desktop  lemon-settings-backgrounds.desktop  lemon-settings-calendar.desktop  lemon-settings-default.desktop  lemon-settings-desklets.desktop  lemon-settings-desktop.desktop  lemon-settings-effects.desktop  lemon-settings-extensions.desktop  lemon-settings-fonts.desktop  lemon-settings-general.desktop  lemon-settings-gestures.desktop  lemon-settings-hotcorner.desktop  lemon-settings-info.desktop  (+18 more)
install-scripts/: add_symlink.py
js/misc/: authClient.js  docInfo.js  fileDialog.js  gnomeSession.js  inputMethod.js  interfaces.js  loginManager.js  pointerTracker.js  portalHandlers.js  screenSaver.js  util.js  windowUtils.js
js/ui/: accessibility.js  appFavorites.js  applet.js  appletManager.js  audioDeviceSelection.js  backgroundManager.js  boxpointer.js  closeDialog.js  desklet.js  deskletManager.js  dnd.js  endSessionDialog.js  environment.js  expo.js  expoThumbnail.js  extension.js  extensionSystem.js  keybindings.js  keyboardManager.js  keyringPrompt.js  layout.js  lemonDBus.js  lemonEntry.js  lightbox.js  locatePointer.js  lookingGlass.js  magnifier.js  magnifierDBus.js  main.js  messageTray.js  modalDialog.js  networkAgent.js  notificationDaemon.js  osdWindow.js  overview.js  panel.js  placesManager.js  polkitAuthenticationAgent.js  popupMenu.js  runDialog.js  (+19 more)
js/ui/appSwitcher/: appSwitcher.js  appSwitcher3D.js  classicSwitcher.js
js/ui/gestures/: actions.js  gesturesManager.js
js/ui/screensaver/: albumArtWidget.js  awayMessageDialog.js  clockWidget.js  infoPanel.js  screenShield.js  unlockDialog.js
man/: lemon-launcher.1  lemon-looking-glass.1  lemon-menu-editor.1  lemon-screensaver-lock-dialog.1  lemon-session-lemon.1  lemon-settings.1  lemon.1  lemon2d.1
po/: POTFILES.in  POTFILES.skip  README
python3/: meson.build
python3/cinnamon/: file_handler.py
python3/lemon/: __init__.py  harvester.py  logger.py  updates.py  zram_setup.py
src/: lemon-action-mode.h  lemon-app-private.h  lemon-app-system-private.h  lemon-app-system.c  lemon-app-system.h  lemon-app.c  lemon-app.h  lemon-doc-system.c  lemon-doc-system.h  lemon-embedded-window-private.h  lemon-embedded-window.c  lemon-embedded-window.h  lemon-enum-types.c.in  lemon-enum-types.h.in  lemon-generic-container.c  lemon-generic-container.h  lemon-global-private.h  lemon-global.c  lemon-global.h  lemon-glsl-effect.c  lemon-glsl-effect.h  lemon-gtk-embed.c  lemon-gtk-embed.h  lemon-keyring-prompt.c  lemon-keyring-prompt.h  lemon-network-agent.c  lemon-network-agent.h  lemon-perf-helper.c  lemon-perf-log.c  lemon-perf-log.h  lemon-plugin.c  lemon-polkit-authentication-agent.c  lemon-polkit-authentication-agent.h  lemon-recorder-src.c  lemon-recorder-src.h  lemon-recorder.c  lemon-recorder.h  lemon-screen.c  lemon-screen.h  lemon-screenshot.c  (+25 more)
src/hotplug-sniffer/: hotplug-sniffer.c  lemon-mime-sniffer.c  lemon-mime-sniffer.h  meson.build
src/screensaver/: cs-auth.h  lemon-screensaver-pam-helper.c  meson.build
src/screensaver/backup-locker/: backup-locker.c  lemon-unlock-desktop  meson.build
src/st/: st-label.c  st-scroll-view.c  st-settings.c  st-theme.c  st-widget.c
tests/unit/: test_build_iso.py  test_file_handler.py
tools/: build-iso.sh  check-for-missing.py
utils/: check-js
utils/lemon-stap-monitor/: lemon-stap-monitor  lemon-stap-monitor.glade  lemon-stap-monitor.py
(+129 files in other folders)
